# cos-cli

./: Cargo.toml  JSONRPC.md  LICENSE  README.md  flake.nix
src/: dispatch.rs  main.rs  server.rs
